Fix scrollbar appearing on firefox for uber too

--- a/assets/css/graph.css
+++ b/assets/css/graph.css
@@ -109,6 +109,8 @@
 
 body {
     background-color: #223 !important;
+    height: 100%;
+    overflow:hidden;
 }
 
 label {
