--- a/assets/css/netflow.css
+++ b/assets/css/netflow.css
@@ -3,8 +3,6 @@ html {
 }
 body {
     background: linear-gradient(to bottom, rgba(242,246,248,1) 0%, rgba(216,225,231,1) 6%, rgba(181,198,208,1) 6%, rgba(214,229,239,1) 79%, rgba(244, 250, 255, 1) 88%);
-    height: 100%;
-    overflow:hidden;
 }
 
 
